# MusicSynthesisFinal

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  flake.nix  pyproject.toml
src/flaskr/: __init__.py  example.py  main.py
src/musicsynthesisfinal/: ai_note_factory.py  app.py  beat.py  chord.py  classical.py  data.py  folk.py  hiphop.py  hiphoptemplate.py  main.py  melody.py  note_factory.py  pop.py  sampling.py  test.py  text2midi_example.py  utils.py
web/: package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
web/src/: app.html
web/src/lib/: MusicSelector.svelte  MusicSheet.svelte  StyleSelector.svelte  ToneSelector.svelte  alphaTab.d.ts
web/src/routes/: +layout.svelte  +page.svelte  StyleSelector.svelte  ToneSelector.svelte  utils.ts
web/static/: 200.html
