[project]
name = "musicsynthesisfinal"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "jw910731", email = "jw910731@gmail.com" }
]
dependencies = [
    "music21>=8.3.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
