[tool.poetry]
name = "musicsynthesisfinal"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    {include = "musicsynthesisfinal", from = "src"},
    {include = "flaskr", from = "src"},
]

[tool.poetry.dependencies]
python = "3.11.*"
Flask = "^3.0.0"
music21 = "^9.1.0"

[tool.poetry.scripts]
web = "flaskr.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
